@@ -79,6 +79,10 @@ ToDo/Notes:
 	- Load the quota file ($Quota) and check if quota tracking is enabled
 	  and if so, mark the quotas out of date.  This causes windows to
 	  rescan the volume on boot and update all quota entries.
+	- Add a set_page_dirty address space operation for ntfs_m[fs]t_aops.
+	  It is simply set to __set_page_dirty_nobuffers() to make sure that
+	  running set_page_dirty() on a page containing mft/ntfs records will
+	  not affect the dirty state of the page buffers.
 
 2.1.14 - Fix an NFSd caused deadlock reported by several users.
 
